# race_auv

./: readme.md
race_auv/: CMakeLists.txt  package.xml
race_auv_bringup/: CMakeLists.txt  package.xml
race_auv_bringup/config/: bhv_params.yaml  bhv_teleop.yaml  localization.yaml  mvp_control.yaml  mvp_mission.yaml  navsat.yaml  sim_params.yaml
race_auv_bringup/launch/: bringup_simulation.launch.py
race_auv_bringup/launch/include/: description.launch.py  joy.launch.py  localization.launch.py  (+3 more)
race_auv_config/: CMakeLists.txt  package.xml
race_auv_config/mvp_control_config/: config.yaml
race_auv_config/mvp_mission_config/: helm.yaml
race_auv_description/: CMakeLists.txt  package.xml
race_auv_description/config/: config.rviz
race_auv_description/mesh/: RACE_body.stl
race_auv_description/urdf/: base.urdf
race_bringup/: CMakeLists.txt  package.xml
race_bringup/launch/: bringup_helm.launch  bringup_localization.launch  bringup_mvp.launch  bringup_power_swithc.launch  bringup_sensors.launch  bringup_simulation.launch  bringup_test.launch  bringup_thrusters.launch  bringup_vehicle.launch  calibration_imu.launch  test_dry_sensors.launch  test_gpsd.launch
race_config/: CMakeLists.txt  package.xml
race_config/config/: control.yaml  control_sim.yaml  gpio_manager.yaml  microstrain.yaml  nucleus_dvl.yaml  pi_pico.yaml  pwm_driver.yaml  robot_localization.yaml  xsens_imu.yaml
race_description/: CMakeLists.txt  package.xml
race_description/launch/: description.launch
race_description/rviz/: config.rviz
race_description/urdf/: base.urdf.xacro
(+19 files in other folders)
